Actualicé el archivo index.html

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <main class="dashboard">
         <h1>Análisis</h1>
         <div class="stats">
-          <div class="stat">810<br><small>Pedidos</small></div>
+          <div class="stat">810<br><small>ordenes</small></div>
           <div class="stat">230<br><small>Citas</small></div>
           <div class="stat">56<br><small>Clientes</small></div>
           <div class="stat">$254,800<br><small>Ingresos</small></div>
